--- a/index.html
+++ b/index.html
@@ -1,52 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vodoco Services – Professional Cleaning</title>
-  <meta name="description" content="Vodoco Services: reliable domestic, office & strata cleaning in Sydney. Carpet steam, end of tenancy and more.">
+
+  <!-- Primary SEO -->
+  <meta name="description" content="Vodoco Services – Professional Cleaning in Sydney. Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest prices, reliable team. Call 0413 387 095.">
+  <link rel="canonical" href="https://hellojulio.github.io/">
+
+  <!-- Open Graph (Facebook/WhatsApp) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://hellojulio.github.io/">
+  <meta property="og:title" content="Vodoco Services – Professional Cleaning">
+  <meta property="og:description" content="Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest results.">
+  <meta property="og:image" content="https://hellojulio.github.io/og-image.png">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Vodoco Services – Professional Cleaning">
+  <meta name="twitter:description" content="Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest results.">
+  <meta name="twitter:image" content="https://hellojulio.github.io/og-image.png">
+
+  <!-- Contact/Geo (optional) -->
+  <meta name="telephone" content="+61413387095">
+  <meta name="email" content="hello.vodoco@outlook.com">
+
+  <!-- Theme color para móvil -->
+  <meta name="theme-color" content="#007f5f">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+  <!-- Fonts & CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
+  <!-- LocalBusiness JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"LocalBusiness",
+    "name":"Vodoco Services",
+    "image":"https://hellojulio.github.io/og-image.png",
+    "url":"https://hellojulio.github.io",
+    "telephone":"+61 413 387 095",
+    "email":"hello.vodoco@outlook.com",
+    "address":{
+      "@type":"PostalAddress",
+      "streetAddress":"3303/39 Rhodes St",
+      "addressLocality":"Hillsdale",
+      "addressRegion":"NSW",
+      "postalCode":"2036",
+      "addressCountry":"AU"
+    },
+    "areaServed":"Sydney",
+    "priceRange":"$$",
+    "description":"Reliable domestic, office & strata cleaning across Sydney. Carpet steam, end of tenancy, and more.",
+    "sameAs":[
+      "https://maps.google.com/?q=3303/39%20Rhodes%20St,%20Hillsdale%20NSW%202036"
+    ]
+  }
+  </script>
   <style>
-    :root { --brand:#00796B; --ink:#333; --paper:#fff; --muted:#eaf6f3; }
+    :root { --brand:#00796B; --ink:#333; --paper:#fff; --muted:#f5f7f8; }
     *{box-sizing:border-box}
-    body{
-      margin:0; font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;
-      color:var(--ink); background:var(--muted); line-height:1.6;
-    }
-    header{ background:var(--brand); color:#fff; padding:26px 16px; text-align:center }
-    header img{ max-height:70px; display:block; margin:0 auto 12px }
-    h1,h2{margin:0 0 12px}
+    body{margin:0;font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;color:var(--ink);background:#eaf6f3;line-height:1.6;text-align:center}
+    header{background:var(--brand);color:#fff;padding:24px 16px}
+    header img{max-height:70px;display:block;margin:0 auto 12px}
+    h1,h2{color:var(--brand);margin:0 0 12px}
     p{margin:0 0 12px}
-    .container{ max-width:1000px; margin:18px auto; padding:0 16px }
-    .lead{ font-size:1.05rem; margin:10px 0 0 0 }
-    .btnbar{display:flex; gap:12px; flex-wrap:wrap; justify-content:center; margin:16px 0}
-    .button{display:inline-block; padding:10px 18px; border-radius:10px; text-decoration:none; font-weight:600; transition:.2s}
-    .button.primary{background:var(--brand); color:#fff}
-    .button.primary:hover{filter:brightness(.92)}
-    footer{margin-top:30px; padding:16px; font-size:.9rem; color:#555; background:#f5f7f8; text-align:center}
-    footer a{color:var(--brand); text-decoration:none}
+    .btnbar{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin:14px 0}
+    .button{display:inline-block;padding:10px 18px;border-radius:10px;text-decoration:none;font-weight:600;transition:0.2s}
+    .button.primary{background:var(--brand);color:#fff}
+    .button.primary:hover{filter:brightness(0.92)}
+    .button.ghost{background:transparent;color:var(--brand);border:2px solid var(--brand)}
+    .button.ghost:hover{background:var(--brand);color:#fff}
+    footer{margin-top:30px;padding:16px;font-size:0.9rem;color:#555;background:#f5f7f8}
+    footer a{color:var(--brand);text-decoration:none}
   </style>
 </head>
-<body>
 
-  <!-- HERO -->
+<body>
+  <header class="header" role="banner">
+    <img src="logo-vodoco.png" alt="Vodoco Services Logo" class="logo" width="96" height="96">
+    <div>
+      <h1>Vodoco Services</h1>
+      <p class="slogan">Professional Care. Honest Results.</p>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero" aria-labelledby="hero-title">
+    <h2 id="hero-title">Spotless results, guaranteed.</h2>
   <header>
     <img src="logo.png" alt="Vodoco Services Logo">
     <h1>Vodoco Services – Professional Cleaning</h1>
-    <p class="lead">Reliable domestic, office & strata cleaning across Sydney. Carpet steam, end of tenancy, and more.</p>
+    <p>Reliable domestic, office & strata cleaning across Sydney. Carpet steam, end of tenancy, and more.</p>
+    <div class="cta-row">
+     <div class="btnbar">
+  <a href="about.html" class="button ghost">About Us</a>
+  <a href="CleaningQuoteApp/quote.html" class="button primary">Get Quote</a>
+</div>
+
+      <a class="btn btn-outline" href="tel:+61413387095" aria-label="Call now">Call: 0413 387 095</a>
+      <a class="btn btn-whatsapp" href="https://wa.me/61413387095?text=Hi%20Julio%2C%20I%27d%20like%20a%20cleaning%20quote" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
+        WhatsApp
+      </a>
+    </div>
+  </section>
+
+  <!-- Services -->
+  <section class="services" aria-labelledby="services-title">
+    <h2 id="services-title">Our Services</h2>
+    <div class="service-list">
+      <div class="service">Domestic Cleaning</div>
+      <div class="service">Office & Strata</div>
+      <div class="service">Carpet Steam</div>
+      <div class="service">End of Tenancy</div>
+    </div>
+  </section>
+
+  <!-- Pricing -->
+  <section class="pricing" id="pricing" aria-labelledby="pricing-title">
+    <h2 id="pricing-title">Domestic Cleaning Packages – Eastern Suburbs</h2>
+
+    <div class="price-note">
+      <p>
+        ✅ These fixed prices apply to <strong>Domestic Cleaning</strong> only.<br>
+        For all other cleaning services (Carpet Steam, End of Tenancy, Office/Strata, High Pressure, etc.), please request a quote.
+      </p>
+    </div>
+
+    <table class="price-table">
+      <thead>
+        <tr>
+          <th scope="col">Property</th>
+          <th scope="col">Weekly</th>
+          <th scope="col">Bi-weekly</th>
+          <th scope="col">Monthly</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Studio / 1 BR – 1 BA</td>
+          <td>$129</td>
+          <td>$139</td>
+          <td>$149</td>
+        </tr>
+        <tr>
+          <td>2 BR – 1 BA</td>
+          <td>$149</td>
+          <td>$159</td>
+          <td>$169</td>
+        </tr>
+        <tr>
+          <td>2 BR – 2 BA</td>
+          <td>$169</td>
+          <td>$179</td>
+          <td>$209</td>
+        </tr>
+        <tr>
+          <td>3 BR – 2 BA</td>
+          <td>$189</td>
+          <td>$199</td>
+          <td>$209</td>
+        </tr>
+        <tr>
+          <td>3 BR – 3 BA</td>
+          <td>$209</td>
+          <td>$219</td>
+          <td>$229</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="addons">
+      <h3>Hourly Rates</h3>
+      <ul>
+        <li>Weekly — $55/hr</li>
+        <li>Bi-weekly — $58/hr</li>
+        <li>Monthly — $60/hr</li>
+      </ul>
+
+      <h3>Extras (optional)</h3>
+      <ul>
+        <li>Oven cleaning — $35</li>
+        <li>Interior fridge — $25</li>
+      </ul>
+    </div>
+
+    <p class="note">
+      * Prices include GST.<br>
+      * If you are looking for negotiable prices, give Julio a call:
+      <a href="tel:+61413387095">0413 387 095</a>.
+    </p>
+
+    <a class="btn" href="CleaningQuoteApp/quote.html">Request a Quote for Other Services</a>
+  </section>
+
+  <!-- Contact -->
+  <section class="contact" aria-labelledby="contact-title">
+    <h2 id="contact-title">Contact Us</h2>
+    <p><strong>Phone:</strong> <a href="tel:+61413387095">0413 387 095</a></p>
+    <p><strong>Email:</strong> <a href="mailto:hello.vodoco@outlook.com">hello.vodoco@outlook.com</a></p>
+    <p><strong>Address:</strong> 3303/39 Rhodes St, Hillsdale NSW 2036</p>
+    <p><strong>ABN:</strong> 31 595 981 360</p>
+    <!-- (Opcional) Embed del mapa si quieres mostrarlo en página:
+    <div class="map-embed">
+      <iframe
+        title="Vodoco Services Location"
+        width="100%" height="300" style="border:0"
+        loading="lazy" allowfullscreen
+        referrerpolicy="no-referrer-when-downgrade"
+        src="https://www.google.com/maps?q=3303/39%20Rhodes%20St,%20Hillsdale%20NSW%202036&output=embed">
+      </iframe>
+    </div>
+    -->
+  </section>
   </header>
 
-  <!-- CONTENIDO -->
-  <main class="container">
-    <div class="btnbar">
-      <a href="about.html" class="button">About Us</a>
-      <a href="https://hellojulio.github.io/CleaningQuoteApp/quote.html" class="button primary">Get Quote</a>
-    </div>
+  <!-- Footer -->
+  <footer class="footer" role="contentinfo">
+    <p>© 2025 Vodoco Services. All rights reserved.</p>
+  <!-- Botones principales -->
+  <div class="btnbar">
+    <a href="about.html" class="button ghost">About Us</a>
+    <a href="https://hellojulio.github.io/CleaningQuoteApp/quote.html" class="button primary">Get Quote</a>
+  </div>
 
-    <div class="btnbar">
-      <a href="tel:0413387095" class="button primary">Call: 0413 387 095</a>
-      <a href="https://wa.me/61413387095" class="button primary">WhatsApp</a>
-    </div>
-  </main>
+  <!-- Botones de contacto -->
+  <div class="btnbar">
+    <a href="tel:0413387095" class="button primary">Call: 0413 387 095</a>
+    <a href="https://wa.me/61413387095" class="button primary">WhatsApp</a>
+  </div>
 
   <footer>
     <p>3303/39 Rhodes St, Hillsdale NSW 2036 · ABN 31 595 981 360 · PayID 0413 387 095</p>
