--- a/index.html
+++ b/index.html
@@ -5,70 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vodoco Services – Professional Cleaning</title>
 
-  <!-- Primary SEO -->
   <meta name="description" content="Vodoco Services – Professional Cleaning in Sydney. Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest prices, reliable team. Call 0413 387 095.">
   <link rel="canonical" href="https://hellojulio.github.io/">
 
-  <!-- Open Graph (Facebook/WhatsApp) -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://hellojulio.github.io/">
   <meta property="og:title" content="Vodoco Services – Professional Cleaning">
   <meta property="og:description" content="Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest results.">
   <meta property="og:image" content="https://hellojulio.github.io/og-image.png">
 
-  <!-- Twitter Card -->
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Vodoco Services – Professional Cleaning">
   <meta name="twitter:description" content="Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest results.">
   <meta name="twitter:image" content="https://hellojulio.github.io/og-image.png">
 
-  <!-- Contact/Geo (optional) -->
+  <!-- Contact -->
   <meta name="telephone" content="+61413387095">
   <meta name="email" content="hello.vodoco@outlook.com">
-
-  <!-- Theme color para móvil -->
   <meta name="theme-color" content="#007f5f">
 
-  <!-- Favicons -->
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Fonts & CSS (tu hoja externa + estilos básicos de botones/layout) -->
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
 
-  <!-- LocalBusiness JSON-LD -->
+  <!-- Structured data FAQ -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
-    "@type":"LocalBusiness",
-    "name":"Vodoco Services",
-    "image":"https://hellojulio.github.io/og-image.png",
-    "url":"https://hellojulio.github.io",
-    "telephone":"+61 413 387 095",
-    "email":"hello.vodoco@outlook.com",
-    "address":{
-      "@type":"PostalAddress",
-      "streetAddress":"3303/39 Rhodes St",
-      "addressLocality":"Hillsdale",
-      "addressRegion":"NSW",
-      "postalCode":"2036",
-      "addressCountry":"AU"
-    },
-    "areaServed":"Sydney",
-    "priceRange":"$$",
-    "description":"Reliable domestic, office & strata cleaning across Sydney. Carpet steam, end of tenancy, and more.",
-    "sameAs":[
-      "https://maps.google.com/?q=3303/39%20Rhodes%20St,%20Hillsdale%20NSW%202036"
+    "@type":"FAQPage",
+    "mainEntity":[
+      {"@type":"Question","name":"Do you bring supplies?","acceptedAnswer":{"@type":"Answer","text":"Yes. We bring all standard supplies. If you prefer eco/your own products, we can use them."}},
+      {"@type":"Question","name":"Are you insured?","acceptedAnswer":{"@type":"Answer","text":"Yes, fully insured. ABN: 31 595 981 360."}},
+      {"@type":"Question","name":"Which areas do you cover?","acceptedAnswer":{"@type":"Answer","text":"Eastern Suburbs of Sydney. Ask for other locations."}}
     ]
   }
   </script>
 
-  <!-- Estilos base (ligeros, no rompen tu styles.css) -->
   <style>
     :root { --brand:#00796B; --ink:#333; --paper:#fff; --muted:#f5f7f8; }
     *{box-sizing:border-box}
@@ -85,15 +66,23 @@
     .button.primary:hover{filter:brightness(0.92)}
     .button.ghost{background:transparent;color:var(--brand);border:2px solid var(--brand)}
     .button.ghost:hover{background:var(--brand);color:#fff}
-    .price-note{max-width:900px;margin:0 auto 14px;background:#fff;border:1px solid #e7ecef;border-radius:10px;padding:12px}
+    .services,.pricing,.contact,.trust,.reviews,.faq{padding:22px 16px}
+    .service-list{display:flex;gap:10px;flex-wrap:wrap;justify-content:center}
+    .service{background:#fff;border:1px solid #e7ecef;border-radius:10px;padding:10px 14px}
+    .price-note,.addons,.note{max-width:900px;margin:0 auto 14px;background:#fff;border:1px solid #e7ecef;border-radius:10px;padding:12px}
     .price-table{width:100%;max-width:900px;margin:0 auto;border-collapse:collapse;background:#fff;border:1px solid #e7ecef;border-radius:10px;overflow:hidden}
     .price-table th,.price-table td{padding:12px;border-bottom:1px solid #eef2f4}
     .price-table thead th{background:#f1f6f5;color:#0a3d37;text-align:left}
-    .addons{max-width:900px;margin:16px auto;background:#fff;border:1px solid #e7ecef;border-radius:10px;padding:12px}
-    .note{max-width:900px;margin:10px auto;text-align:center}
-    .services,.pricing,.contact{padding:22px 16px}
-    .service-list{display:flex;gap:10px;flex-wrap:wrap;justify-content:center}
-    .service{background:#fff;border:1px solid #e7ecef;border-radius:10px;padding:10px 14px}
+    .price-table tbody tr:hover{background:#f9fbfb}
+    .price-table td:nth-child(2),.price-table th:nth-child(2){background:#f6fffb;font-weight:600}
+    .trust-badges{display:flex;gap:10px;flex-wrap:wrap;justify-content:center}
+    .trust-badges span{background:#fff;border:1px solid #e7ecef;border-radius:999px;padding:8px 12px}
+    .reviews-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:14px}
+    blockquote{margin:0;padding:16px;border-radius:12px;background:#fff;border:1px solid #e7ecef}
+    blockquote p{margin:0 0 10px}
+    blockquote footer{font-size:.9rem;color:#555}
+    details{background:#fff;border:1px solid #e7ecef;border-radius:10px;padding:12px;margin-bottom:8px}
+    details summary{cursor:pointer;font-weight:600}
     .footer{padding:18px;text-align:center;background:#f5f7f8;color:#555}
     .footer a{color:var(--brand);text-decoration:none}
   </style>
@@ -101,30 +90,37 @@
 
 <body>
   <!-- Header -->
-  <header role="banner">
-    <img src="logo-vodoco.png" alt="Vodoco Services Logo" class="logo" width="96" height="96">
-    <div>
-      <h1>Vodoco Services</h1>
-      <p class="slogan">Professional Care. Honest Results.</p>
-    </div>
+  <header>
+    <img src="logo-vodoco.png" alt="Vodoco Services Logo" width="96" height="96">
+    <h1>Vodoco Services</h1>
+    <p class="slogan">Professional Care. Honest Results.</p>
   </header>
 
   <!-- Hero -->
-  <section class="hero container" aria-labelledby="hero-title">
-    <h2 id="hero-title">Spotless results, guaranteed.</h2>
+  <section class="hero container">
+    <h2>Spotless results, guaranteed.</h2>
     <p>Reliable domestic, office & strata cleaning across Sydney. Carpet steam, end of tenancy, and more.</p>
-
     <div class="btnbar">
       <a href="about.html" class="button ghost">About Us</a>
       <a href="CleaningQuoteApp/quote.html" class="button primary">Get Quote</a>
-      <a class="button primary" href="tel:+61413387095" aria-label="Call now">Call: 0413 387 095</a>
-      <a class="button primary" href="https://wa.me/61413387095?text=Hi%20Julio%2C%20I%27d%20like%20a%20cleaning%20quote" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">WhatsApp</a>
+      <a href="tel:+61413387095" class="button primary">Call: 0413 387 095</a>
+      <a href="https://wa.me/61413387095" class="button primary">WhatsApp</a>
+    </div>
+  </section>
+
+  <!-- Trust badges -->
+  <section class="trust container">
+    <div class="trust-badges">
+      <span>✅ ABN 31 595 981 360</span>
+      <span>🛡️ Fully Insured</span>
+      <span>🔍 Police-checked Team</span>
+      <span>✨ 100% Satisfaction</span>
     </div>
   </section>
 
   <!-- Services -->
-  <section class="services container" aria-labelledby="services-title">
-    <h2 id="services-title">Our Services</h2>
+  <section class="services container">
+    <h2>Our Services</h2>
     <div class="service-list">
       <div class="service">Domestic Cleaning</div>
       <div class="service">Office & Strata</div>
@@ -133,57 +129,46 @@
     </div>
   </section>
 
-  <!-- Pricing -->
-  <section class="pricing container" id="pricing" aria-labelledby="pricing-title">
-    <h2 id="pricing-title">Domestic Cleaning Packages – Eastern Suburbs</h2>
+  <!-- Reviews -->
+  <section class="reviews container">
+    <h2>What Clients Say</h2>
+    <div class="reviews-grid">
+      <blockquote>
+        <p>“Reliable, friendly, and always spotless. A relief knowing I can count on them every time.”</p>
+        <footer>— <strong>Adam</strong></footer>
+      </blockquote>
+      <blockquote>
+        <p>“10+ years with Julio’s crew. Extremely reliable and detailed. Highly recommended.”</p>
+        <footer>— <strong>Lizzie Babarczy</strong></footer>
+      </blockquote>
+      <blockquote>
+        <p>“Great communication and quality above expectations.”</p>
+        <footer>— <strong>Catherine Ilic</strong>, Senior Property Manager</footer>
+      </blockquote>
+    </div>
+    <div class="btnbar">
+      <a href="about.html" class="button ghost">Read more</a>
+    </div>
+  </section>
 
+  <!-- Pricing -->
+  <section class="pricing container" id="pricing">
+    <h2>Domestic Cleaning Packages – Eastern Suburbs</h2>
     <div class="price-note">
-      <p>
-        ✅ These fixed prices apply to <strong>Domestic Cleaning</strong> only.<br>
-        For all other cleaning services (Carpet Steam, End of Tenancy, Office/Strata, High Pressure, etc.), please request a quote.
-      </p>
+      ✅ Prices apply to <strong>Domestic Cleaning</strong> only.<br>
+      For other cleaning services please request a quote.
     </div>
 
-    <table class="price-table" aria-describedby="pricing-title">
+    <table class="price-table">
       <thead>
-        <tr>
-          <th scope="col">Property</th>
-          <th scope="col">Weekly</th>
-          <th scope="col">Bi-weekly</th>
-          <th scope="col">Monthly</th>
-        </tr>
+        <tr><th>Property</th><th>Weekly</th><th>Bi-weekly</th><th>Monthly</th></tr>
       </thead>
       <tbody>
-        <tr>
-          <td>Studio / 1 BR – 1 BA</td>
-          <td>$129</td>
-          <td>$139</td>
-          <td>$149</td>
-        </tr>
-        <tr>
-          <td>2 BR – 1 BA</td>
-          <td>$149</td>
-          <td>$159</td>
-          <td>$169</td>
-        </tr>
-        <tr>
-          <td>2 BR – 2 BA</td>
-          <td>$169</td>
-          <td>$179</td>
-          <td>$209</td>
-        </tr>
-        <tr>
-          <td>3 BR – 2 BA</td>
-          <td>$189</td>
-          <td>$199</td>
-          <td>$209</td>
-        </tr>
-        <tr>
-          <td>3 BR – 3 BA</td>
-          <td>$209</td>
-          <td>$219</td>
-          <td>$229</td>
-        </tr>
+        <tr><td>Studio / 1 BR – 1 BA</td><td>$129</td><td>$139</td><td>$149</td></tr>
+        <tr><td>2 BR – 1 BA</td><td>$149</td><td>$159</td><td>$169</td></tr>
+        <tr><td>2 BR – 2 BA</td><td>$169</td><td>$179</td><td>$209</td></tr>
+        <tr><td>3 BR – 2 BA</td><td>$189</td><td>$199</td><td>$209</td></tr>
+        <tr><td>3 BR – 3 BA</td><td>$209</td><td>$219</td><td>$229</td></tr>
       </tbody>
     </table>
 
@@ -194,50 +179,23 @@
         <li>Bi-weekly — $58/hr</li>
         <li>Monthly — $60/hr</li>
       </ul>
-
-      <h3>Extras (optional)</h3>
+      <h3>Extras</h3>
       <ul>
         <li>Oven cleaning — $35</li>
         <li>Interior fridge — $25</li>
       </ul>
     </div>
-
     <p class="note">
       * Prices include GST.<br>
-      * If you are looking for negotiable prices, give Julio a call:
+      * For negotiable rates, call Julio:
       <a href="tel:+61413387095">0413 387 095</a>.
     </p>
-
     <div class="btnbar">
       <a class="button primary" href="CleaningQuoteApp/quote.html">Request a Quote for Other Services</a>
     </div>
   </section>
 
-  <!-- Contact -->
-  <section class="contact container" aria-labelledby="contact-title">
-    <h2 id="contact-title">Contact Us</h2>
-    <p><strong>Phone:</strong> <a href="tel:+61413387095">0413 387 095</a></p>
-    <p><strong>Email:</strong> <a href="mailto:hello.vodoco@outlook.com">hello.vodoco@outlook.com</a></p>
-    <p><strong>Address:</strong> 3303/39 Rhodes St, Hillsdale NSW 2036</p>
-    <p><strong>ABN:</strong> 31 595 981 360</p>
-    <!-- (Opcional) Google Map embed:
-    <div class="map-embed">
-      <iframe
-        title="Vodoco Services Location"
-        width="100%" height="300" style="border:0"
-        loading="lazy" allowfullscreen
-        referrerpolicy="no-referrer-when-downgrade"
-        src="https://www.google.com/maps?q=3303/39%20Rhodes%20St,%20Hillsdale%20NSW%202036&output=embed">
-      </iframe>
-    </div>
-    -->
-  </section>
-
-  <!-- Footer -->
-  <footer class="footer" role="contentinfo">
-    <p>© 2025 Vodoco Services. All rights reserved.</p>
-    <p>3303/39 Rhodes St, Hillsdale NSW 2036 · ABN 31 595 981 360 · PayID 0413 387 095 ·
-      <a href="mailto:hello.vodoco@outlook.com">hello.vodoco@outlook.com</a></p>
-  </footer>
-</body>
-</html>
+  <!-- FAQ -->
+  <section class="faq container">
+    <h2>FAQ</h2>
+    <details><s
